--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,8 @@
                 "Prinx\\Sevotransact\\Laravel\\ServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
